2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the function to match file and library name

	* engine/sapwood-client.c,
	* engine/sapwood-client.h: renamed the function to
	sapwood_client_get_socket()
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: updated

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved pixbuf_proto_get_socket() into the shared library

	* engine/sapwood-client.c,
	* engine/sapwood-client.h: new location for this function
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: use the shared function, not two completely
	identical but separate ones

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the enumeration value to match the file and library name

	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: renamed the enumeration

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the error enumeration into the shared header

	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.h: moved the enumeration
	* tests/double-free.c: dropped the #define replacement for the
	enumeration

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the error quark to match the file and library name

	* engine/sapwood-client.c,
	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: renamed the quark

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the error quark into libsapwood-client.la

	* engine/sapwood-client.c (sapwood_pixmap_error_get_quark),
	* engine/sapwood-client.h: added the error quark
	* engine/sapwood-pixmap.c,
	* engine/sapwood-pixmap.h: delegate the error quark to the client
	library
	* tests/double-free.c: drop the error quark hack; use the quark from
	the client library

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Create libsapwood-client.la to be shared between the engine and the
	test cases

	* engine/Makefile.am: create libsapwood-client.la
	* tests/Makefile.am: link against libsapwood-client.la

2008-09-29  Sven Herzberg  <sven@imendio.com>
